user-apps/miscellaneous/vaultwarden/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  serviceName: vaultwarden
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
        netpol.cilium.io/egress-deny: "true"
        netpol.cilium.io/ingress-from-ingress: "true"
    spec:
      priorityClassName: application-critical
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: vaultwarden
          image: ghcr.io/dani-garcia/vaultwarden:1.37.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: vaultwarden-data
              mountPath: /data
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
  volumeClaimTemplates:
    - metadata:
        name: vaultwarden-data
        labels:
          recurring-job.longhorn.io/source: enabled
          recurring-job-group.longhorn.io/critical: enabled
          recurring-job-group.longhorn.io/default: disabled
      spec:
        accessModes: 
          - ReadWriteOnce
        resources:
          requests:
            storage: 128Mi
